# sf-compiler

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: sf-compiler-config.cmake.in
compiler/: CMakeLists.txt
compiler/include/sionflow/compiler/: sf_compiler.h
compiler/src/: sf_codegen.c  sf_compiler.c  sf_compiler_internal.h  sf_compiler_manifest.c  sf_graph_utils.c  sf_graph_utils.h  sf_json_parser.c  sf_op_metadata.c  sf_passes.h
compiler/src/passes/: sf_pass_analyze.c  sf_pass_decompose.c  sf_pass_domain_split.c  sf_pass_fuse.c  sf_pass_inline.c  sf_pass_liveness.c  sf_pass_lower.c  sf_pass_simplify.c  sf_pass_sort.c  sf_pass_task_plan.c  sf_pass_validate.c
sfc/: CMakeLists.txt
sfc/src/: main.c
tools/: smart_packer.py
tools/metadata/: compiler_spec.json
tools/templates/: sf_compiler_pipeline.c.j2  sf_fusion_rules.c.j2  sf_op_metadata.c.j2  sf_pass_analyze_gen.c.j2  sf_pass_validate_gen.c.j2
vcpkg-ports/sf-compiler/: portfile.cmake  vcpkg.json
